# MorCE-Decoder

./: .gitignore  CMakeLists.txt  README.md  main.c  morse_tree.c  parse_input_str.c  seven_segment.c
includes/: morse_tree.h  parse_input_str.h  seven_segment.h
